style: fix BasePage spacing

--- a/src/components/BasePage.module.scss
+++ b/src/components/BasePage.module.scss
@@ -25,7 +25,7 @@ $navHeaderHeight: 64px;
   height: $navHeaderHeight;
 }
 
-.AppHeader {
+.contentWrapper {
   background-color: #282c34;
   min-height: calc(100vh - #{$navHeaderHeight});
   display: flex;
@@ -34,6 +34,7 @@ $navHeaderHeight: 64px;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding-bottom: 48px;
 }
 
 .AppLink {
@@ -52,4 +53,8 @@ $navHeaderHeight: 64px;
 .appTitle {
   width: 100%;
   text-align: left;
+}
+
+.navButton {
+  color: #ffffff;
 }
